<resources>
    <string name="app_name">Real Estate Manager</string>

    <string name="on_error">An error have occurred, please check your parameters and try again</string>

    <!-- ______________________BOTTOM NAV__________________ -->
    <string name="maps">Maps</string>
    <string name="list">List</string>

    <!-- ______________________TOP BAR__________________ -->
    <string name="menu_icon">Menu icon</string>
    <string name="update_property_icon">update propertyInformation icon</string>
    <string name="add_property_icon">add propertyInformation icon</string>

    <!-- ______________________CONTENT DESCRIPTION__________________ -->
    <string name="property_item_photo">propertyInformation item photo</string>
    <string name="property_detail_item_photo">propertyInformation detail item photo</string>
    <string name="location_maps_view">propertyLocation maps view</string>
    <string name="icon">Icon</string>
    <string name="update_property_button">update propertyInformation button</string>
    <string name="delete_button">delete button</string>
    <string name="full_screen_image">full screen image</string>
    <string name="photo_set_on_set_title_dialog">photo set on set title dialog</string>


    <!-- ______________________TEXT VIEW__________________ -->
    <string name="property_type">Property Type</string>
    <string name="town">Town</string>
    <string name="price">Price ($)</string>
    <string name="description">Description</string>
    <string name="media">Media</string>
    <string name="surface">Surface (m²)</string>
    <string name="description_text">Description text</string>
    <string name="sold">Sold</string>
    <string name="propertyLocation">Location</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>

    <!-- ______________________EDIT TEXT__________________ -->
    <string name="value">Value</string>
    <string name="information">Information</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>

    <!-- ______________________MAPS FRAGMENT_________________ -->
    <string name="exception">Exception: %s</string>

    <!--_______________________PROPERTY TYPE___________________ -->
    <string-array name="property_type">
        <item>HOUSE</item>
        <item>FLAT</item>
        <item>DUPLEX</item>
        <item>PENTHOUSE</item>
    </string-array>

    <!--_______________________WARNING___________________ -->

    <string name="gps_warning_message">GPS is Disabled in your device, enable it to be located</string>
    <string name="information_not_filled">Please, fill all \"Information\" values and at least one photo before register</string>
    <string name="no_camera_warning">You have no camera on your phone, so you can\'t use camera button to add pictures. You could always add pictures from your image folder.</string>
    <string name="no_internet_message">Network is not available, you\'ll not be able to download position or points of interests.\n \n   Please try again when internet is available</string>
    <string name="add_date_message">You have to enter a date if sold is set</string>
    <string name="enter_description">You have to enter a description before accept.</string>

    <!--_______________________CUSTOM ALERT DIALOG___________________ -->

    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="room">Room</string>
    <string name="on_market_from">On market from</string>
    <string name="sold_from">Sold from</string>
    <string name="house">HOUSE</string>
    <string name="flat">FLAT</string>
    <string name="duplex">DUPLEX</string>
    <string name="penthouse">PENTHOUSE</string>
    <string name="date_picker_button">date picker button</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="school">school</string>
    <string name="restaurant">restaurant</string>
    <string name="supermarket">supermarket</string>
    <string name="close_filter_button">close filter button</string>
    <string name="reset_filter">reset filter</string>
    <string name="contextual_add_or_update_button">contextual add or update button</string>

    <string name="euro">€</string>
    <string name="dollar">$</string>
    <string name="play_logo_if_video">play logo if video</string>
    <string name="is_sold_from">Is sold from :\u0020 </string>




    <string name="chanel_id">default_channel</string>
    <string name="chanel_name">Message from RealEstateManager</string>
    <string name="intent_extra_name">message</string>

    <string name="notification_add_start_message">You have add new property : \n</string>
    <string name="notification_add_message_title">ADD PROPERTY</string>
    <string name="notification_update_start_message">You have updated property : \n</string>
    <string name="notification_update_message_title">UPDATE PROPERTY</string>
    <string name="notification_id">id :\u0020</string>
    <string name="notification_address">\naddress :\u0020 </string>
    <string name="notification_number_of_photos">\nnumber of media :\u0020 </string>
    <string name="notification_number_of_point_of_interst">\nnumber of points of interest : \u0020</string>
    <string name="square_meter">m²</string>
    <string name="no_match_found">No property match your request.</string>
    <string name="no_filter_selected">No filter selected.</string>
    <string name="media_click_info">Long click to select/deselect</string>
    <string name="welcome_message">\"Welcome to Real Estate Manager,\nplease enter your name : \"</string>


</resources>
