<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/property_item_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/property_item_photo"
        app:layout_constraintBottom_toBottomOf="@id/property_item_price"
        app:layout_constraintEnd_toStartOf="@id/property_item_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/property_item_type"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/property_item_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/property_type"
        android:textAppearance="@style/TextAppearance.RealEstateManagerStyles.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/property_item_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/property_item_town"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/town"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/property_item_type"
        app:layout_constraintTop_toBottomOf="@id/property_item_type" />

    <TextView
        android:id="@+id/property_item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.RealEstateManagerStyles.Headline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/property_item_type"
        app:layout_constraintTop_toBottomOf="@id/property_item_town" />


</androidx.constraintlayout.widget.ConstraintLayout>